# rules_zig

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml
examples/bzlmod_consumer/: BUILD.bazel.example  MODULE.bazel.example  README.md  main.zig.example
examples/hello_world/: BUILD.bazel  main.zig
examples/math_lib/: BUILD.bazel  math.zig  math_test.zig
examples/multi_package/: README.md
examples/multi_package/app/: BUILD.bazel  main.zig
examples/multi_package/lib/: BUILD.bazel  greeting.zig
tests/: BUILD.bazel  README.md
tests/integration/basic/: BUILD.bazel  main.zig  math.zig  math_test.zig
tests/private/: BUILD.bazel  smoke_test.bzl
zig/: defs.bzl  extensions.bzl  rules.bzl  toolchain.bzl
zig/private/: versions.bzl  zig_repository.bzl  zig_toolchains_repo.bzl
