load("//tests/private:smoke_test.bzl", "binary_smoke_test", "build_smoke_test")
load("//zig:defs.bzl", "zig_binary", "zig_library", "zig_test")

zig_library(
    name = "math",
    srcs = ["math.zig"],
)

zig_binary(
    name = "calculator",
    srcs = ["main.zig"],
)

zig_test(
    name = "math_unit_test",
    srcs = [
        "math_test.zig",
        "math.zig",
    ],
)

build_smoke_test(
    name = "math_build_test",
    target = ":math",
)

binary_smoke_test(
    name = "calculator_smoke_test",
    binary = ":calculator",
)
